force-app/main/default/objects/Game_Song_List_Item__c/Game_Song_List_Item__c.object-meta.xml
<CustomObject>
    <label>Game Song List Item</label>
    <nameField>
        <displayFormat>GSLI-{0000}</displayFormat>
        <label>Game Song List Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Song List Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>