force-app/main/default/objects/Game_Song_List_Item__c/fields/Game_Song__c.field-meta.xml
<CustomField>
    <fullName>Game_Song__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Game Song</label>
    <referenceTo>Game_Song__c</referenceTo>
    <relationshipLabel>Game Song List Items (Song)</relationshipLabel>
    <relationshipName>Game_Song_List_Items_Song</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>