force-app/main/default/objects/Game_Song_List_Item__c/fields/Game_Song_List__c.field-meta.xml
<CustomField>
    <fullName>Game_Song_List__c</fullName>
    <label>Game Song List</label>
    <referenceTo>Game_Song_List__c</referenceTo>
    <relationshipLabel>Game Song List Items</relationshipLabel>
    <relationshipName>Game_Song_List_Items</relationshipName>
    <type>MasterDetail</type>
</CustomField>